--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Cryptocurrency Trading Simulator Backend",
   "main": "index.js",
   "scripts": {
-    "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "node ./db/seed.js",
+    "setup-dbs": "node setup-dbs.js",
     "setup-dev": "node setup-dev.js",
     "test": "NODE_ENV=test jest",
     "test-watch": "NODE_ENV=test jest --watch",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
