--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "NODE_ENV=test jest",
     "test-watch": "NODE_ENV=test jest --watch",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node db/seed.js"
   },
   "keywords": [],
   "author": "",
