--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test-watch": "NODE_ENV=test jest --watch --runInBand",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node db/seed.js"
+    "seed": "node db/seed.js",
+    "clear-price-history": "node clear-price-history.js"
   },
   "keywords": [],
   "author": "",
